updated navbar z-index; header overflow, services, clients and contact fixed

--- a/src/components/Clients/clients.module.css
+++ b/src/components/Clients/clients.module.css
@@ -1,8 +1,34 @@
 .clients {
   background: rgb(194, 193, 193);
+  margin-bottom: 1em;
+}
+
+.clientImgCont {
+  display: inline-block;
+  max-width: 40%;
+}
+
+.clientProfile {
+  max-width: 50%;
+  position: absolute;
+  display: inline-block;
+  margin-left: 2em;
 }
 
 .carousel {
   /* display: block; */
   position: relative;
+}
+
+@media screen and (max-width: 640px) {
+  .clientImgCont {
+    max-width: 100%;
+    margin: 2%;
+  }
+
+  .clientProfile {
+    max-width: 100%;
+    position: relative;
+    margin: 0.6em;
+  }
 }
