--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -6,7 +6,7 @@
   font-size: 0.8em;
   position: fixed;
   width: 100%;
-  z-index: 1;
+  z-index: 2;
 }
 
 .topInfo1 {
@@ -17,7 +17,9 @@
   padding-right: 1em;
   float: right;
   color: white;
+  display: block;
 }
+
 .topInfo2:hover {
   text-decoration: none;
   color: rgba(255, 255, 255, 0.582);
@@ -27,6 +29,7 @@ nav {
   margin: 0 auto;
   padding-top: 2em !important;
   background: #0054a4 !important;
+  z-index: 1;
 }
 
 .brandName {
