--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -2,6 +2,9 @@ html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
 body {
   margin: 0;
